--- a/src/html/index.html
+++ b/src/html/index.html
@@ -80,7 +80,7 @@
     </div>
 
     <div class="clipboard__image">
-      <img src="../assets/images/image-devices.png" alt="">
+      <img src="./assets/images/image-devices.png" alt="">
     </div>
 
   </section>
@@ -99,7 +99,7 @@
 
     <div class="supercharge-service">
       <div class="supercharge-service__icon">
-        <img src="../assets/images/icon-blacklist.svg" alt="">
+        <img src="./assets/images/icon-blacklist.svg" alt="">
       </div>
       <h3 class="supercharge-services__title">Create blacklists</h3>
       <p class="supercharge-services__description">Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
@@ -107,7 +107,7 @@
 
     <div class="supercharge-service">
       <div class="supercharge-service__icon">
-        <img src="../assets/images/icon-text.svg" alt="">
+        <img src="./assets/images/icon-text.svg" alt="">
       </div>
       <h3 class="supercharge-services__title">Plain text snippets</h3>
       <p class="supercharge-services__description">Remove unwanted formatting from copied text for a consistent look.</p>
@@ -115,7 +115,7 @@
 
     <div class="supercharge-service">
       <div class="supercharge-service__icon">
-        <img src="../assets/images/icon-preview.svg" alt="">
+        <img src="./assets/images/icon-preview.svg" alt="">
       </div>
       <h3 class="supercharge-services__title">Sneak preview</h3>
       <p class="supercharge-services__description">Quick preview of all snippets on your Clipboard for easy access.</p>
@@ -125,11 +125,11 @@
 </section>
 
 <article class="logos">
-  <div class="logos__logo"><img src="../assets/images/logo-google.png" alt="logo-google"></div>
-  <div class="logos__logo"><img src="../assets/images/logo-ibm.png" alt="logo-ibm"></div>
-  <div class="logos__logo"><img src="../assets/images/logo-microsoft.png" alt="logo-microsoft"></div>
-  <div class="logos__logo"><img src="../assets/images/logo-hp.png" alt="logo-hp"></div>
-  <div class="logos__logo"><img src="../assets/images/logo-vector-graphics.png" alt="logo-vector"></div>
+  <div class="logos__logo"><img src="./assets/images/logo-google.png" alt="logo-google"></div>
+  <div class="logos__logo"><img src="./assets/images/logo-ibm.png" alt="logo-ibm"></div>
+  <div class="logos__logo"><img src="./assets/images/logo-microsoft.png" alt="logo-microsoft"></div>
+  <div class="logos__logo"><img src="./assets/images/logo-hp.png" alt="logo-hp"></div>
+  <div class="logos__logo"><img src="./assets/images/logo-vector-graphics.png" alt="logo-vector"></div>
 
 </article>
 
