--- a/src/html/index.html
+++ b/src/html/index.html
@@ -153,24 +153,24 @@
   </div>
 
   <div class="columns">
-    <p>FAQs</p>
-    <p>Contact Us</p>
+    <p class="columns__item">FAQs</p>
+    <p class="columns__item">Contact Us</p>
   </div>
 
   <div class="columns">
-    <p>Privacy Policy</p>
-    <p>Press Kit</p>
+    <p class="columns__item">Privacy Policy</p>
+    <p class="columns__item">Press Kit</p>
   </div>
 
   <div class="columns">
-    <p>Install Guide</p>
+    <p class="columns__item">Install Guide</p>
   </div>
 
   <div class="columns">
-      <div class="social">
-      <a href="#"><i class="fab fa-facebook-square"></i></a>
-      <a href="#"><i class="fab fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
+      <div class="social columns__item">
+      <a class="icon" href="#"><i class="fab fa-facebook-square"></i></a>
+      <a class="icon" href="#"><i class="fab fa-twitter"></i></a>
+      <a class="icon" href="#"><i class="fab fa-instagram"></i></a>
     </div>
   </div>
 
