--- a/src/html/index.html
+++ b/src/html/index.html
@@ -120,6 +120,7 @@
         <h3 class="supercharge-service__title">Sneak preview</h3>
         <p class="supercharge-service__description">Quick preview of all snippets on your Clipboard for easy access.</p>
       </div>
+
     </div>
   </section>
 
@@ -134,11 +135,13 @@
 
 
   <section class="clip">
-    <h2 class="clip__title">Clipboard for iOS and Mac OS</h2>
-    <p class="clip__txt">
-      Available for free on the App Store. Download for Mac or iOS, sync with iCloud and you’re ready to start adding to your clipboard.
-    </p>
-
+    <div class="clip__header">
+      <h2 class="clip__title">Clipboard for iOS and Mac OS</h2>
+      <p class="clip__txt">
+        Available for free on the App Store. Download for Mac or iOS, sync with iCloud and you’re ready to start adding to your clipboard.
+      </p>
+    </div>
+    
     <div class="clip__buttons">
       <button class="clip__button btn btn--green">Download for iOS</button>
       <button class="clip__button btn btn--blue">Download for Mac</button>
