--- a/src/html/index.html
+++ b/src/html/index.html
@@ -124,14 +124,14 @@
     </div>
   </section>
 
-  <article class="logos">
+  <section class="logos">
     <div class="logos__logo"><img class="logos__img" src="./assets/images/logo-google.png" alt="logo-google"></div>
     <div class="logos__logo"><img class="logos__img" src="./assets/images/logo-ibm.png" alt="logo-ibm"></div>
     <div class="logos__logo"><img class="logos__img" src="./assets/images/logo-microsoft.png" alt="logo-microsoft"></div>
     <div class="logos__logo"><img class="logos__img" src="./assets/images/logo-hp.png" alt="logo-hp"></div>
     <div class="logos__logo"><img class="logos__img" src="./assets/images/logo-vector-graphics.png" alt="logo-vector"></div>
 
-  </article>
+  </section>
 
 
   <section class="clip">
